<resources>
    <string name="app_name">AppArbitraje</string>
    <string name="MensajeBienvenida">Bienvenido a AppArbitraje</string>
    <string name="RegistrarNuevaCuenta">Registrar Nueva Cuenta</string>
    <string name="SuNombre">Nombre</string>
    <string name="SuEmail">Email</string>
    <string name="SuPassword">Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="opciones">Opciones</string>
    <string name="crear_una_nueva_cuenta">Crear una nueva Cuenta</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="iniciar_sesion1">Iniciar Sesión</string>
    <string name="tipo_de_app">Tipo de App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sanda">Sanda</string>
    <string name="qingda">Qingda</string>
    <string name="kungfu_combat">KungFu Combat</string>
    <string name="shuai_jiao">Shuai Jiao</string>
    <string name="cuenta_de_usuario">Cuenta de Usuario</string>
    <string name="nombre_y_apellidos">Nombre y Apellidos</string>
    <string name="cargo">Cargo</string>
    <string name="cambiar_datos">Cambiar Datos</string>
    <string name="cambiar_imagen">Cambiar Imagen</string>
    <string name="nivel">Nivel</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="ver_campeonatos">Ver Campeonatos</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="anadir_campeonato">Añadir Campeonato</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="anadir_modalidades">Añadir Modalidades</string>
    <string name="descripcion">Descripción</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso</string>
    <string name="sexo">Sexo</string>
    <string name="anadir_categorias">Añadir Categorías</string>
    <string name="listadoArbitros">Listado Árbitros</string>
    <string name="listadoModalidades">Listado Modalidades</string>
    <string name="anadir">+</string>
    <string name="lista_categorias">Lista Categorías</string>
    <string name="foto_del_competidor_rojo">Foto del Competidor Rojo</string>
    <string name="amonestaciones">Amonestaciones</string>
    <string name="penalizaciones">Penalizaciones</string>
    <string name="salidas">Salidas</string>
    <string name="cuentas">Cuentas</string>
    <string name="_0">0</string>
    <string name="foto_del_competidor_azul">Foto del Competidor Azul</string>
    <string name="crono">CRONO</string>
    <string name="tko">TKO</string>
    <string name="ko">KO</string>
    <string name="comenzar_combate">Comenzar Combate</string>
    <string name="terminar_combate">Terminar Combate</string>
    <string name="terminar_asalto">Terminar Asalto</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="s">S</string>
    <string name="c">C</string>
    <string name="silla_1">Silla 1</string>
    <string name="foto_del_arbitro">Foto del Árbitro</string>
    <string name="puntuacion">Puntuación</string>
    <string name="estado_de_conexion">Estado de Conexión</string>
    <string name="arbitrar">Arbitrar</string>
    <string name="combate">Combate</string>
    <string name="asalto">Asalto</string>
    <string name="pausa">Pausa</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="r3">R3</string>
    <string name="r2">R2</string>
    <string name="r1">R1</string>
    <string name="logotipo_federacion_galega_de_kungfu">Logotipo Federación Galega de Kungfu</string>
    <string name="punetazo">Puñ</string>
    <string name="patada_1">Pat 1</string>
    <string name="patada_2">Pat 2</string>
    <string name="patadas">Patadas</string>
    <string name="proyeccion_1">Proy 1</string>
    <string name="proyeccion_2">Proy 2</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="mostrar_cartulinas">Mostrar Cartulinas</string>
    <string name="patada_3">Pat 3</string>
    <string name="_3">+3</string>
    <string name="categoria">Categoría</string>
    <string name="lista_de_combates">Lista de Combates</string>
    <string name="modalidad">Modalidad</string>
    <string name="ganador">Ganador</string>
    <string name="motivo">Motivo</string>
    <string name="estado">Estado</string>
    <string name="numero">Número</string>
    <string name="lista_de_asaltos">Lista de Asaltos</string>
    <string name="enlace_al_video">Enlace al Vídeo</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="elija_el_competidor">Elija el Competidor</string>
    <string name="x">X</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="dni_pasaporte">DNI / Pasaporte</string>
    <string name="elegir">Elegir</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="categoria_de_edad">Categoría de Edad</string>
    <string name="categoria_de_peso">Categoría de Peso</string>
    <string name="altura">Altura</string>
    <string name="envergadura">Envergadura</string>
    <string name="federacion">Federación</string>
    <string name="escuela_club">Escuela / Club</string>
    <string name="pais">País</string>
    <string name="competidor">Competidor</string>
    <string name="peso_ej_56_75">Peso (Ej : 56.75)</string>
    <string name="eliminar">-</string>
    <string name="numero_de_combate">Número de Combate</string>
    <string name="asignarPeso"><![CDATA[->]]></string>
    <string name="comprobar">Comprobar</string>
    <string name="generar">Generar</string>
    <string name="zona_de_combate">Zona de Combate</string>
    <string name="id_campeonato">ID Campeonato</string>
    <string name="lista_de_arbitros">Lista de Árbitros</string>
    <string name="anadir_arbitro">Añadir Árbitro</string>
    <string name="cambiar_password">Cambiar Password</string>
    <string name="buscador_de_arbitros">Buscador de Árbitros</string>
    <string name="aplicar_filtro">Aplicar Filtro</string>
    <string name="lista_de_campeonatos">Lista de Campeonatos</string>
    <string name="app_logo">App Logo</string>
    <string name="lista_de_combates_disponibles">Lista de Combates Disponibles</string>
    <string name="asignar"><![CDATA[->]]></string>
    <string name="revertir_seleccion"><![CDATA[<-]]></string>
    <string name="listado_de_zonas_de_combate">Listado de Zonas de Combate</string>
    <string name="texto">texto</string>
    <string name="resultados">Resultados</string>
    <string name="bandera">Bandera</string>
    <string name="combates_asignados">Combates Asignados</string>
    <string name="arbitros_asignados">Árbitros Asignados</string>
    <string name="duracion">Duración</string>
    <string name="lista_de_puntuaciones">Lista de Puntuaciones</string>
    <string name="lista_de_incidencias">Lista de Incidencias</string>
    <string name="foto_del_ganador">Foto del Ganador</string>
    <string name="concepto">Concepto</string>
    <string name="tipo_de_ataque">Tipo de Ataque</string>
    <string name="valor">Valor</string>
    <string name="juez">Juez</string>
    <string name="foto_del_competidor">Foto del Competidor</string>
    <string name="monigote">Monigote</string>
    <string name="marca_de_tiempo">Marca de Tiempo</string>
    <string name="iniciar">Iniciar</string>
    <string name="campeonatos">Campeonatos</string>
    <string name="campeonatos_arbitrados">Campeonatos Arbitrados</string>
    <string name="combates_arbitrados">Combates Arbitrados</string>
    <string name="modalidad_mas_comun">Modalidad más Común</string>
    <string name="categoria_mas_comun">Categoría más Común</string>
    <string name="proximos_eventos">Próximos Eventos</string>
    <string name="ver_combates">Ver Combates</string>
    <string name="campeonatos_en_la_bd">Campeonatos en la BD</string>
    <string name="combates_en_la_bd">Combates en la BD</string>
    <string name="competidores_en_la_bd">Competidores en la BD</string>
    <string name="arbitros">Árbitros</string>
    <string name="arbitros_en_la_bd">Árbitros en la BD</string>
    <string name="buscador">Buscador</string>
    <string name="nivel_y_cargo">Nivel y Cargo</string>
    <string name="competidores">Competidores</string>
    <string name="lista_de_competidores">Lista de Competidores</string>
    <string name="campeonato">Campeonato</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="mensaje_denegar_disponiblidad">"Ha informado al Árbitro de Mesa de que no está disponible para arbitrar en este momento."</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="enviar_notificaciones">Enviar Notificaciones</string>
    <string name="listo">Listo</string>
    <string name="MensajeConfirmacionDisponibilidad">Ha confirmado su Disponibilidad para Arbitrar.
        \n Espere a que los demás Árbitros de su Zona de Combate hagan lo mismo.</string>
    <string name="denegar">Denegar</string>
    <string name="detalle">Detalle</string>
</resources>