<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background1"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/MensajeBienvenida"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:background="@color/colorAccent2"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/RegistrarNuevaCuenta"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="176dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>